--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
             <version>4.9.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>3.3.0</version>
+        </dependency>
+
     </dependencies>
 
 
